# PQtrust-agent-artifact

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.lock.txt
docs/: architecture.md  bilateral_minimax_selector.md  calibration_quality_control.md  commit_reveal_and_contracts.md  crypto_calibration_protocol.md  cryptographic_calibration.md  end_to_end_agent_runtime.md  experiment_registry.md  final_experimental_campaigns.md  minimal_conflict_certificates.md  paired_relative_cost_calibration.md  policy_compiler.md  reproducibility.md  statistical_analysis_and_figures.md
native/: Makefile
paper/: README.md
schemas/: agent_policy.schema.json  assurance_requirement.schema.json  assurance_vector.schema.json  capability_manifest_payload.schema.json  policy_compilation_result.schema.json  policy_rule.schema.json  profile_catalog.schema.json  profile_compilation_decision.schema.json  requirement_contribution.schema.json  requirement_derivation.schema.json  resource_envelope.schema.json  scenario_definition.schema.json  task_descriptor.schema.json  task_rule_condition.schema.json  trust_profile.schema.json
scripts/: activate_local_openssl.sh  analyze_calibration_quality.py  analyze_crypto_calibration.py  analyze_paired_crypto_costs.py  analyze_stage8_inventory.py  build_local_openssl.sh  build_native_benchmarks.sh  check_environment.py  compare_crypto_calibrations.py  export_schemas.py  generate_agent_evidence_keys.sh  generate_lab_crypto_material.sh  generate_stage9_figures.py  generate_stage9_tables.py  inspect_lab_crypto_material.py  register_stage8_campaign.py  (+29 more)
(+447 files in other folders)
