[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqtrust-agent"
version = "0.1.0"
description = "Reproducibility artifact for policy-compiled post-quantum trust contracts."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Yulliwas Ameur" },
  { name = "Insaf Imene Lasledj" },
  { name = "Samia Bouzefrane" },
]
keywords = [
  "post-quantum cryptography",
  "Web of Agents",
  "trust negotiation",
  "TLS 1.3",
  "ML-KEM",
  "ML-DSA",
  "crypto-agility",
]

dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "rfc8785==0.1.4",
  "z3-solver==4.16.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis",
  "ruff",
  "mypy",
  "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pqtrust_agent*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
show_error_codes = true
mypy_path = "src"
files = ["src", "scripts"]

[[tool.mypy.overrides]]
module = "z3"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pqtrust_agent"]
